fix scrollbar of capa and procurement

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -39,5 +39,5 @@
 
 .custom-content {
   height: 95%;
-  overflow-y: auto;
+  overflow-y: hidden;
 }
